fix(ui): Unset overflow on collapsible when not necessary

--- a/packages/ui/src/components/Collapsible/index.css
+++ b/packages/ui/src/components/Collapsible/index.css
@@ -24,6 +24,7 @@
 
 :where(.cui-collapsible[aria-expanded="true"]) {
 	opacity: 1;
+	overflow: unset;
 	visibility: visible;
 }
 
